# openmodelica-fmu-export-win

./: CMakeLists.txt  README.rst  appveyor.yml  deviation_c.mo  export.mos  mo2fmu.bat  mo2fmu.mos  simulate.bat  wrapper.c
